--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,12 @@
 .jumbotron {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-color: gray;
+    background-color: royalblue;
     color: white;
 }
 
 h1.display-4 {
-    font-size: 85px;
+    font-size: 60px;
     font-weight: bold;
 }
 
@@ -21,4 +21,12 @@ p.lead {
     font-size: 25px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+    margin-left: 1%;
+}
+
+.form-group {
+    margin-left: 1%;
 }
